--- a/pombola/core/static/sass/_south-africa_overrides.scss
+++ b/pombola/core/static/sass/_south-africa_overrides.scss
@@ -1416,6 +1416,9 @@ ul.pager {
         padding-top: 1em;
         position: relative;
     }
+    li {
+        overflow: hidden;
+    }
     a {
         color: $colour-black;
         text-decoration: none;
